fp-library/tests/ui/new_send_not_sync.stderr
error[E0277]: `RefCell<i32>` cannot be shared between threads safely
  --> tests/ui/new_send_not_sync.rs:12:42
   |
12 |       let _ = <ArcFnBrand as SendLiftFn>::new(move |_: ()| {
   |               ------------------------------- ^-----------
   |               |                               |
   |  _____________|_______________________________within this `{closure@$DIR/tests/ui/new_send_not_sync.rs:12:42: 12:54}`
   | |             |
   | |             required by a bound introduced by this call
13 | |         println!("{:?}", cell);
14 | |     });
   | |_____^ `RefCell<i32>` cannot be shared between threads safely
   |
   = help: within `{closure@$DIR/tests/ui/new_send_not_sync.rs:12:42: 12:54}`, the trait `Sync` is not implemented for `RefCell<i32>`
   = note: if you want to do aliasing and mutation between multiple threads, use `std::sync::RwLock` instead
note: required because it's used within this closure
  --> tests/ui/new_send_not_sync.rs:12:42
   |
12 |     let _ = <ArcFnBrand as SendLiftFn>::new(move |_: ()| {
   |                                             ^^^^^^^^^^^^
note: required by a bound in `fp_library::classes::SendLiftFn::new`
  --> src/classes/send_clone_fn.rs
   |
   |         fn new<'a, A: 'a, B: 'a>(
   |            --- required by a bound in this associated function
   |             f: impl 'a + Fn(A) -> B + Send + Sync
   |                                              ^^^^ required by this bound in `SendLiftFn::new`
